# vivaTracker

./: .gitignore  CMakeLists.txt  Contribute.md  Home.md  List-of-Available-Algorithms-and-Datasets.md  README.md  Requirements.md  Why-vivaTracker?.md  _Sidebar.md  macros.txt  main.cpp  plot.py  precomp.h.in  vivaTracker.md
core/: CMakeLists.txt  channel.cpp  channel.h  core.cpp  core.h  input.cpp  input.h  listener.cpp  listener.h  output.cpp  output.h  processframe.cpp  processframe.h  utils.cpp  utils.h
doc/trackerlib/html/: annotated.html  annotated_dup.js  class_draw-members.html  class_draw.html  class_ground_truth-members.html  class_ground_truth.html  class_rect_select_area-members.html  class_rect_select_area.html  class_rect_select_area.js  class_tracker-members.html  class_tracker.html  class_tracker.js  class_tracker_factory-members.html  class_tracker_factory.html  class_tracking_process-members.html  class_tracking_process.html  class_tracking_process.js  class_tracking_process__coll__graph.md5  class_tracking_process__inherit__graph.map  classes.html  dir_4ed4c23dfd1b88d791dd486e90c7ff01.html  dir_4ed4c23dfd1b88d791dd486e90c7ff01.js  factories_8cpp.html  factories_8h.html  factories_8h_source.html  files.html  files.js  functions.html  functions_func.html  functions_vars.html  graph_legend.html  hierarchy.html  hierarchy.js  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_2.map  inherit_graph_2.md5  (+18 more)
doc/trackerlib/html/search/: all_0.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  functions_5.js  functions_6.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  variables_7.js  variables_8.js
doc/trackerlib/latex/: annotated.tex  class_draw.tex  class_ground_truth.tex  class_rect_select_area.tex  class_tracker.tex  class_tracker_factory.tex  class_tracking_process.eps  class_tracking_process.tex  class_tracking_process__inherit__graph.md5  dir_4ed4c23dfd1b88d791dd486e90c7ff01.tex  factories_8cpp.tex  factories_8h.tex  files.tex  hierarchy.tex  refman.tex  struct_color.tex  tracker_8h.tex  tracking__process_8cpp.tex  tracking__process_8h.tex
license/: kcf.license  kcf2.license  opentld.license  skcf.license  struck.license  trackerlib.license  vivaTracker.license  vivalib.license
trackerlib/: factories.cpp  factories.h  tracker.h  tracking_process.cpp  tracking_process.h
trackers/: CMakeLists.txt  factories.h  tracking_process.cpp  tracking_process.h
trackers/SKCFDCF/: CMakeLists.txt  gradient.cpp  ktrackers.cpp  skcfdcf.cpp  skcfdcf.h
trackers/kcf/: CMakeLists.txt  kcftracker.cpp  kcftracker.hpp  labdata.hpp
trackers/kcf2/: complexmat.hpp  fhog.hpp  gradientMex.cpp  gradientMex.h  kcf.cpp  kcf.h
trackers/ncc/: CMakeLists.txt  ncc.cpp  ncc.h
trackers/opentld/: BB.cpp  BBPredict.cpp  BlobOperators.cpp  BlobResult.cpp  EnsembleClassifier.cpp  FBTrack.cpp  Lk.cpp  Median.cpp  MedianFlowTracker.cpp  TLD.cpp  opentld.cpp  opentld.h
trackers/skcf/: CMakeLists.txt  gradient.cpp  gradient.h  ktrackers.cpp  ktrackers.h  skcfdcf.cpp  skcfdcf.h
trackers/struck/: Config.cpp  Config.h  Features.h  HaarFeature.cpp  HaarFeature.h  HaarFeatures.cpp  HaarFeatures.h  HistogramFeatures.cpp  HistogramFeatures.h  ImageRep.cpp  ImageRep.h  Kernels.h  LaRank.cpp  LaRank.h  MultiFeatures.cpp  MultiFeatures.h  RawFeatures.cpp  RawFeatures.h  Rect.h  STRUCKtracker.cpp  STRUCKtracker.h  Sample.h  Sampler.cpp  Sampler.h
viva/: CMakeLists.txt  channel.cpp  channel.h  input.cpp  input.h  listener.cpp  listener.h  output.cpp  output.h  utils.h  viva.cpp  viva.h
vivalib/: channel.cpp  channel.h  input.cpp  input.h  listener.cpp  listener.h  output.cpp  output.h  utils.cpp  utils.h  viva.cpp  viva.h
